Bug 138315 - More options buttons in Chart Sidebar deck do not react to clicks
Summary: More options buttons in Chart Sidebar deck do not react to clicks
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
7.1.0.0.alpha1+
Hardware: All All
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:7.1.0
Keywords: bibisected, bisected, regression
Depends on:
Blocks: Chart-Sidebar
  Show dependency treegraph
 
Reported: 2020-11-18 19:12 UTC by Buovjaga
Modified: 2020-11-19 17:31 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Buovjaga 2020-11-18 19:12:38 UTC
1. Open Writer and insert a chart
2. Select an element like the chart wall
3. In the Sidebar, click the small hamburger buttons in the titles of Area and Line

It doesn't open More options dialog.

Bibisected with linux-64-7.1 repo to

https://git.libreoffice.org/core/commit/64dcfe295762864656bc5876da10bec37b7fb6ec
weld panel TitleBar

Adding Cc: to Caolán McNamara
Comment 1 Caolán McNamara 2020-11-19 09:25:29 UTC
I wonder why its just chart that has the problem
Comment 2 Commit Notification 2020-11-19 15:52:38 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/60b568714eebcdfd53b3da5c23664909e64c42dc

tdf#138315 make More options buttons in Chart Sidebar deck work again

It will be available in 7.1.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 Buovjaga 2020-11-19 17:31:47 UTC
Verified, thanks

Arch Linux 64-bit
Version: 7.1.0.0.alpha1+
Build ID: 60b568714eebcdfd53b3da5c23664909e64c42dc
CPU threads: 8; OS: Linux 5.9; UI render: default; VCL: kf5
Locale: fi-FI (fi_FI.UTF-8); UI: en-US
Calc: threaded
Built on 19 November 2020