tdf#138315 make More options buttons in Chart Sidebar deck work again

Change-Id: I513c09bcec21fcb9a6c7c08ba528822ba06474f7
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/106161
Tested-by: Jenkins
Reviewed-by: Caolán McNamara <caolanm@redhat.com>